--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -18,7 +18,7 @@
           </p>
         <!-- Post Main Content -->
         <div class="entry-content">
-          <%- page.content %>
+          <%- page.more %>
         </div>
       </article>
     </div>
