--- a/layout/_partial/comment.ejs
+++ b/layout/_partial/comment.ejs
@@ -1,7 +1,6 @@
 <% if (page.comments){ %>
 <section id="comment">
   <!-- <h1 class="title"><%= __('comment') %></h1> -->
-
   <% if(theme.disqus_shortname) { %>
   <div id="disqus_thread">
     <script type="text/javascript">
@@ -13,21 +12,34 @@
     </script>
     <noscript>Please enable JavaScript to view the <a href="//disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
   </div>
-  <% } else if (theme.duoshuo_shortname) { %>
-    <!-- 多说评论框 start -->
-        <script type="text/javascript">
-var duoshuoQuery = {short_name:"<%= theme.duoshuo_shortname %>"};
-	(function() {
-		var ds = document.createElement('script');
-		ds.type = 'text/javascript';ds.async = true;
-		ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
-		ds.charset = 'UTF-8';
-		(document.getElementsByTagName('head')[0] 
-		 || document.getElementsByTagName('body')[0]).appendChild(ds);
-	})();
-	</script>
-    <div class="ds-thread" data-thread-key="<%= page.layout %>-<%= page.slug %>" data-title="<%= page.title %>" data-url="<%= page.permalink %>"></div>
-    <!-- 多说评论框 end -->
-  <% } %>
+  <% } else if (theme.wangyi_shortname) { %>
+    <!-- 网易评论框 start -->
+    <div id="cloud-tie-wrapper" class="cloud-tie-wrapper"></div>
+    <script src="https://img1.cache.netease.com/f2e/tie/yun/sdk/loader.js"></script>
+    <script>
+        var cloudTieConfig = {
+            url: document.location.href,
+            sourceId: "",
+            productKey: "a8219aeffc1f4001aa397cb688314546",
+            target: "cloud-tie-wrapper"
+        };
+        var yunManualLoad = true;
+        Tie.loader("aHR0cHM6Ly9hcGkuZ2VudGllLjE2My5jb20vcGMvbGl2ZXNjcmlwdC5odG1s", true);
+    </script>
+    <!-- 网易评论框 end -->
+  <% } else if (theme.changyan_shortname) { %>
+    <!-- 畅言公共JS代码 start (一个网页只需插入一次) -->
+    <!--PC和WAP自适应版-->
+    <div id="SOHUCS" ></div>
+    <script type="text/javascript">
+        (function(){
+            var appid = 'cytnYqkHS';
+            var conf = 'prod_4b0a55ac3f40181c22839d8715142693';
+            var width = window.innerWidth || document.documentElement.clientWidth;
+            if (width < 960) {
+                window.document.write('<script id="changyan_mobile_js" charset="utf-8" type="text/javascript" src="http://changyan.sohu.com/upload/mobile/wap-js/changyan_mobile.js?client_id=' + appid + '&conf=' + conf + '"><\/script>'); } else { var loadJs=function(d,a){var c=document.getElementsByTagName("head")[0]||document.head||document.documentElement;var b=document.createElement("script");b.setAttribute("type","text/javascript");b.setAttribute("charset","UTF-8");b.setAttribute("src",d);if(typeof a==="function"){if(window.attachEvent){b.onreadystatechange=function(){var e=b.readyState;if(e==="loaded"||e==="complete"){b.onreadystatechange=null;a()}}}else{b.onload=a}}c.appendChild(b)};loadJs("http://changyan.sohu.com/upload/changyan.js",function(){window.changyan.api.config({appid:appid,conf:conf})}); } })();
+    </script>
+    <!-- 畅言公共JS代码 end -->
+    <% } %>
 </section>
 <% } %>
