--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -1,56 +1,64 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
   <!--Description-->
   <% if (page.description){ %>
   <meta name="description" content="<%= page.description %>">
   <% } else if (config.description){ %>
   <meta name="description" content="<%= config.description %>">
   <% } %>
-
   <!--Author-->
   <% if (config.author){ %>
   <meta name="author" content="<%= config.author %>">
   <% } %>
-
   <!--Open Graph Title-->
   <% if (page.title){ %>
-      <meta property="og:title" content="<%= page.title %>"/>
+  <meta property="og:title" content="<%= page.title %>"/>
   <% } else { %>
-      <meta property="og:title" content="<%= config.title %>"/>
+  <meta property="og:title" content="<%= config.title %>"/>
   <% } %>
   <!--Open Graph Description-->
   <% if (page.description){ %>
-      <meta property="og:description" content="<%= page.description %>" />
+  <meta property="og:description" content="<%= page.description %>" />
   <% } else if (config.description) { %>
-      <meta property="og:description" content="<%= config.description %>" />
+  <meta property="og:description" content="<%= config.description %>" />
   <% } %>
   <!--Open Graph Site Name-->
+
   <meta property="og:site_name" content="<%= config.title %>"/>
+
   <!--Type page-->
   <% if(page.title) { %>
-      <meta property="og:type" content="article" />
+  <meta property="og:type" content="article" />
   <% } else { %>
-      <meta property="og:type" content="website" />
+  <meta property="og:type" content="website" />
   <% } %>
   <!--Page Cover-->
   <% if (page.share_cover) { %>
-      <meta property="og:image" content="<%= config.url %><%= page.share_cover %>" />
+  <meta property="og:image" content="<%= config.url %><%= page.share_cover %>" />
   <% } else if (config.cover) { %>
-      <meta property="og:image" content="<%= config.url %><%= config.cover %>"/>
+  <meta property="og:image" content="<%= config.url %><%= config.cover %>"/>
   <% } %>
-
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <!-- 百度统计 -->
     <script>
 	var _hmt = _hmt || [];
 	(function() {
   	var hm = document.createElement("script");
-  	hm.src = "https://hm.baidu.com/hm.js?c0451e16533956173997b85f7a8de666";
+  	hm.src = "https://hm.baidu.com/hm.js?<%=theme.baidu_analytics%>";
   	var s = document.getElementsByTagName("script")[0]; 
   	s.parentNode.insertBefore(hm, s);
 	})();
+    </script>
+    <!-- 谷歌统计 -->
+    <script type="text/javascript">
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', '<%= theme.google_analytics %>', 'auto');
+    ga('send', 'pageview');
     </script>
   <!-- Title -->
   <%
@@ -67,11 +75,11 @@
   %>
   <title><%= title.join(' - ') %></title>
 
-
   <link rel="shortcut icon" href="<%- url_for(config.favicon || theme.favicon) %>">
     <!--font-awesome-->
   <link rel="stylesheet" href="//cdn.bootcss.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <!-- Custom CSS/Sass -->
   <%- css('css/style') %>
-
+  <%- js('js/pace') %>
+  <%- css('css/pace-theme-flash') %>
 </head>
