--- a/layout/_partial/nav.ejs
+++ b/layout/_partial/nav.ejs
@@ -1,28 +1,26 @@
 <header class="site-header">
   <div class="header-inside">
-    
     <div class="logo">
-      <a href="<%= url_for() %>" rel="home">
+      <a href="<%= url_for() -%>" rel="home">
         <% if (config.logo || theme.logo) { %>
-        <img src="<%- config.logo || theme.logo %>" alt="<%- config.title %>" height="60">
+        <img src="<%- config.logo || theme.logo -%>" alt="<%- config.title %>" height="60">
         <% } %>
       </a>
     </div>
     <a class="header-name" href="<%= url_for() %>">
-            <span><%- config.title %></span>
-            的部落宅
-        </a>
+        <span><%- config.title %></span>的部落宅
+    </a>
     <!-- navbar -->
     <nav class="navbar">
       <!--  nav links -->
       <div class="collapse">
         <ul class="navbar-nav">
-          <% var site_navs = config.nav || theme.nav  %>
+          <% var site_navs = config.nav || theme.nav  -%>
           <% for (var i in site_navs){ %>
             <li>
-              <a href="<%- site_navs[i].url ? url_for(site_navs[i].url) : url_for(site_navs[i]) %>">
+              <a href="<%- site_navs[i].url ? url_for(site_navs[i].url) : url_for(site_navs[i]) -%>">
                 <% if (site_navs[i].icon) { %>
-                  <i class="fa fa-<%= site_navs[i].icon %> "></i>
+                  <i class="fa fa-<%= site_navs[i].icon -%> "></i>
                 <% } %>
                 <%= site_navs[i].id %>
               </a>
