--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -1,5 +1,5 @@
 <div class="site-content home">
-      <div class="content-header" style="background: url(<%- theme.cover_img %>) no-repeat bottom;">
+      <div class="content-header" style="background: url(<%- theme.cover_img %>) no-repeat top center; background-size: 100% auto;">
         <div class="headline">
             <a href="#" class="demo">
                 <div class="img" style="background-image:url(<%- theme.cover_avator %>)"></div>
@@ -28,9 +28,9 @@
                 <% _.forIn(config.social, function(val, key){ %>
                   <a href="<%- val %>" class="icon-<%- key %>" target="_blank"><i class="fa fa-<%- key %>" aria-hidden="true"></i></a>
                 <% }) %>
-              <% } else { %>
+              <% } else { -%>
                 <% _.forIn(theme.social, function(val, key){ %>
-                  <a href="<%- val %>" class="icon-<%- key %>" target="_blank"><i class="fa fa-<%- key %>" aria-hidden="true"></i></a>
+                  <a href="<%- val -%>" class="icon-<%- key %>" target="_blank"><i class="fa fa-<%- key %>" aria-hidden="true"></i></a>
                 <% }) %>
               <% } %>
             </div>
@@ -42,7 +42,6 @@
           <%- partial('_partial/article-index', {item: item}) %>
         </div> 
     <% }); %>
-
     <%- partial('_partial/pagination') %>
   </main>
 
