--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -1,23 +1,13 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-
 <!-- Head tag -->
-<%- partial('_partial/head') %>
-
+<%- partial('_partial/head') -%>
 <body>
-
   <!-- Nav -->
-  <%- partial('_partial/nav') %>
-
+  <%- partial('_partial/nav') -%>
   <!-- Main Content -->
-  <%- body %>
-
+  <%- body -%>
   <!-- Footer -->
   <%- partial('_partial/footer') %>
-
-  <!-- After footer scripts -->
-  <%- partial('_partial/after-footer') %>
-
 </body>
-
 </html>
