--- a/source/css/_believe.scss
+++ b/source/css/_believe.scss
@@ -5,9 +5,11 @@ html {
 html::-webkit-scrollbar {
   width: 6px;
   background-color: #F5F5F5;
+
 }
 html::-webkit-scrollbar-thumb {
-  background-color: #d32f2f;
+  /*background-color: #d32f2f;*/
+  background-color: #000;
 }
 html::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
@@ -214,9 +216,27 @@ figure {
 table {
   margin: 0 0 1.5em;
   width: 100%;
+  border: 1px solid #ddd;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  background-color: transparent;
 }
 th {
-  font-weight: bold;
+  font-weight: 700;
+  padding: 8px;
+  line-height: 20px;
+  -webkit-border-top-left-radius: 4px;
+  border-top-left-radius: 4px;
+  -moz-border-radius-topleft: 4px;
+  border-top: 1px solid rgba(0,0,0,0.1);
+  border-left: 1px solid rgba(0,0,0,0.1);
+  background-color: rgba(0,0,0,0.1);
+}
+td{
+  padding: 6px;
+  border-top: 1px solid rgba(0,0,0,0.1);
+  border-left: 1px solid rgba(0,0,0,0.1);
 }
 h1, h2, h3, h4 {
   font-family: -apple-system, BlinkMacSystemFont,"Helvetica Neue","PingFang-SC-Regular","STHeiti", "Helvetica","Arial","Verdana","sans-serif","Microsoft YaHei"; }
@@ -385,6 +405,7 @@ Content
     bottom: 50px;
     a{
     	margin: 20px;
+        color: #F2F5F7;
     }
 }
 .content-area {
@@ -520,6 +541,42 @@ Content
   a {
     margin: 0 5px;
     font-style: italic;
+  }
+}
+#page-nav{
+  text-align: center;
+  padding: 1.5em 0;
+  &:after {
+    visibility: hidden;
+    display: block;
+    font-size: 0;
+    content: " ";
+    clear: both;
+    height: 0;
+  }
+  &:hover {
+    .meta-arraw {
+      opacity: 0.8;
+    }
+  }
+  a {
+    text-decoration: none;
+    font-family: "微软雅黑";
+    text-transform: uppercase;
+    font-size: 15px;
+    line-height: 20px;
+    font-weight: 800;
+    box-sizing: content-box;
+    padding: 6px;
+    letter-spacing: 1px;
+    text-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
+    &:hover {
+      opacity: 1;
+      border-radius: 3px;
+      background: black;
+      color: white;
+      padding: 6px;
+    }
   }
 }
 .pager {
