--- a/layout/photo.ejs
+++ b/layout/photo.ejs
@@ -8,7 +8,7 @@
     animation: cont 0.3s;
     border-radius: 3px;
     background-color: #fff;
-    padding: 20px 0px 15px 0px;
+    padding: 20px 0 15px 0;
     clear: both;
 }
 .about-me .counts, .about-me .profile {
@@ -75,7 +75,7 @@
     left: 0;
     right: 0;
     padding: 0 20px;
-    padding-top: 7em;
+    padding-top: 4em;
     margin: auto;
     color: transparent;
     background: 0 0;
