--- a/source/css/_nav.scss
+++ b/source/css/_nav.scss
@@ -21,7 +21,7 @@
   .menu-toggle {
     width: 20px;
     height: 20px;
-    background: url("../images/menu.svg") center no-repeat;
+    background: url("../images/Other/menu.svg") center no-repeat;
     text-indent: -99999px;
     overflow: hidden;
     border: none;
